--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="vibrator.js"></script>
 </head>
 <body>
     <button type="button" onclick="playMario()"> Play Mario </button><br>
@@ -19,27 +20,3 @@
 
 </body>
 </html>
-
-<script>
-    function playPowerRangers() {
-        navigator.vibrate([150,150,150,150,75,75,150,150,150,150,450]);
-    }
-
-    function playMK() {
-        navigator.vibrate([100,200,100,200,100,200,100,200,100,100,100,100,100,200,100,200,100,200,100,200,100,100,100,100,100,200,100,200,100,200,100,200,100,100,100,100,100,100,100,100,100,100,50,50,100,800]);
-    }
-
-    function playFF() {
-        navigator.vibrate([50,100,50,100,50,100,400,100,300,100,350,50,200,100,100,50,600]);
-    }
-
-
-    function playStarWars() {
-        navigator.vibrate([500,110,500,110,450,110,200,110,170,40,450,110,200,110,170,40,500]);
-    }
-
-
-    function playMario() {
-        navigator.vibrate([125,75,125,275,200,275,125,75,128,275,200,600,200,600]);
-    }
-</script>
