link style to html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
-<DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css"></script>
     <script type="text/javascript" src="vibrator.js"></script>
+
 </head>
 <body>
-    <button type="button" onclick="playMario()"> Play Mario </button><br>
-
-    <button type="button" onclick="playStarWars()"> Star Wars </button><br>
-
-    <button type="button" onclick="playPowerRangers()"> Go Go Power Rangers </button><br>
-
-    <button type="button" onclick="playMK()"> Mortal Kombat </button><br>
-    
-    <button type="button" onclick="playFF()"> Final Fantasy Fanfare </button><br>
-
+    <article class="colorfull-btn" onclick="playMario()"> Super Mario </article>
+    <article class="colorfull-btn" onclick="playStarWars()"> Star Wars </article>
+    <article class="colorfull-btn" onclick="playPowerRangers()"> Go Go Power Rangers </article>
+    <article class="colorfull-btn" type="button" onclick="playMK()"> Mortal Kombat </article>
+    <article class="colorfull-btn" type="button" onclick="playFF()"> Final Fantasy Fanfare </article>
 </body>
 </html>
